samples/_failures_safe/1761166458_a05fd6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45ed1e44.c: In function ‘main’:
./samples/SAFE/__tmp_45ed1e44.c:122:17: error: expected declaration or statement at end of input
  122 |                 }
      |                 ^
./samples/SAFE/__tmp_45ed1e44.c:122:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_45ed1e44.c:122:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_45ed1e44.c:122:17: error: expected declaration or statement at end of input
